Port to JDK 19 GA