@@ -1,3 +1,3 @@
 #!/usr/bin/env bash
 
-/opt/jdk-19/bin/java --add-modules jdk.incubator.foreign -classpath out/production/java-gi io.github.jwharm.javagi.JavaGI
+/opt/jdk-19/bin/java --enable-preview -classpath out io.github.jwharm.javagi.JavaGI
